<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center">

    <TextView
        android:id="@+id/tvDetailsCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textSize="30sp"
        android:paddingBottom="20dp"/>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textSize="25sp"
        android:paddingBottom="20dp"/>

    <TextView
        android:id="@+id/tvDetailsTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_header"
        android:textStyle="italic"
        android:textSize="25sp"
        android:paddingBottom="5dp"/>

    <TextView
        android:id="@+id/tvHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity_header"
        android:textStyle="italic"
        android:textSize="25sp"
        android:paddingBottom="5dp"/>

    <TextView
        android:id="@+id/tvPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure_header"
        android:textStyle="italic"
        android:textSize="25sp"
        android:paddingBottom="5dp"/>

    <TextView
        android:id="@+id/tvMinTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_temp_header"
        android:textStyle="italic"
        android:textSize="25sp"
        android:paddingBottom="5dp"/>

    <TextView
        android:id="@+id/tvMaxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_temp_header"
        android:textStyle="italic"
        android:textSize="25sp"
        android:paddingBottom="5dp"/>

    <TextView
        android:id="@+id/tvSunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunrise_header"
        android:textStyle="italic"
        android:textSize="25sp"
        android:paddingBottom="5dp"/>

    <TextView
        android:id="@+id/tvSunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunset_header"
        android:textStyle="italic"
        android:textSize="25sp"
        android:paddingBottom="5dp"/>

</LinearLayout>